src/objects/PricebookEntry.object
<CustomObject>
	 <fields>
        <fullName>IsFreeOfCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFreeOfCharge</label>
        <type>Checkbox</type>
    </fields>
	  <fields>
        <fullName>IsSampleWare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSampleWare</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>IsCan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCan</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>